--- a/styles/scss/nav.scss
+++ b/styles/scss/nav.scss
@@ -1,13 +1,17 @@
 #nav {
   background: $color-secondary;
 
+
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.26);
   .include {
     width: 100%;
     height: 100%;
+    padding: 0 $padding;
 
     a {
       color: $color-tertiary;
+      padding: 1em;
+      text-align: center;
     }
 
     a:visited {
@@ -18,6 +22,21 @@
       color: $color-secondary;
     }
 
+    li:first-child {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: 770px) {
+  #nav .include {
+    padding: 0 1em;
+
+    a { text-align: left;}
+
+    li:first-child {
+      display: inherit;
+    }
   }
 }
 /*
