Change couleur background, Réaligne items du menu

--- a/styles/scss/vars.scss
+++ b/styles/scss/vars.scss
@@ -1,8 +1,8 @@
-$color-text: #767f88;
+$color-text: rgba(118, 127, 136, 1);
 $color-text-footer: $color-text;
-$color-main: #98bf48;
-$color-secondary: #f19900;
-$color-tertiary: #f7f5f5;
+$color-main: rgba(152, 191, 72, 1);
+$color-secondary: rgba(241, 153, 0, 1);
+$color-tertiary: rgba(247, 245, 245, 1);
 
 $bold: 700;
 $semiBold: 600;
