--- a/styles/scss/nav.scss
+++ b/styles/scss/nav.scss
@@ -7,6 +7,13 @@
     width: 100%;
     height: 100%;
     padding: 0 $padding;
+    ul {
+      display: flex;
+      flex-flow: column;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
 
     a {
       color: $color-tertiary;
@@ -24,6 +31,7 @@
 
     li:first-child {
       display: none;
+      width: auto;
     }
   }
 }
@@ -33,6 +41,10 @@
     padding: 0 1em;
 
     a { text-align: left;}
+
+    ul {
+      flex-flow: row;
+    }
 
     li:first-child {
       display: inherit;
