Améliore la mise en page du pied de page

--- a/styles/scss/footer.scss
+++ b/styles/scss/footer.scss
@@ -2,7 +2,31 @@
   padding: $padding;
   background: $color-tertiary;
   color: $color-text-footer;
-  .include {
+
+  div.include {
+    margin: auto;
     text-align: center;
+    width: 100%;
+
+    a {
+      text-decoration: underline;
+    }
+
+    img {
+      max-width: 14em;
+      max-height: 8em;
+      width: auto;
+      height: auto;
+      margin: 1em;
+    }
+
+    .row {
+      display: flex;
+      flex-flow: row wrap;
+      align-items: center;
+      justify-content: center;
+    }
+
+
   }
 }
